# zk-chat

./: .editorconfig  .gitignore  .hone-gates.json  .supply-chain-allow.json  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  COMPOSITIONAL_ARCHITECTURE.md  INTEGRATION_TESTING_PLAN.md  OBSERVABLE.md  PLAN.md  PLUGINS.md  README.md  REFERENCES.md  TOOLS_ENHANCEMENTS_PLAN.md  USE_CASES.md  chroma_gateway.py  dev-requirements.txt  embedding_gateway.py  llm_gateway.py  markdown.py  mkdocs.yml  models.py  pyproject.toml  pytest.ini  rag.py  requirements.txt  settings.py  setup.py  zettelkasten.py  zk_chat.py  zk_query.py  zk_reindex.py
.claude/: settings.local.json
.claude/agents/: uv-python-craftsperson.md
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  python.yml  validate-test-publish.yml
.junie/: guidelines.md
audit/: add-core-module-tests-plan.md  add-core-module-tests.md  agent-setup-duplication-actions.md  agent-setup-duplication-plan.md  agent-setup-duplication.md  config-io-contamination-actions.md  config-io-contamination-plan.md  config-io-contamination.md  consolidate-zettelkasten-services-actions.md  consolidate-zettelkasten-services-plan.md  consolidate-zettelkasten-services.md  duplicate-composition-root-actions.md  duplicate-composition-root-plan.md  duplicate-composition-root.md  maintain-2026-02-15-112807-actions.md  maintain-2026-02-15-195156-actions.md  maintain-2026-02-20-020857-actions.md  maintain-2026-02-20-020931-actions.md  maintain-2026-04-11-041054-actions.md  maintain-2026-04-15-053625-actions.md  maintain-2026-04-16-044823-actions.md  maintain-2026-05-11-052214-actions.md  maintain-2026-05-13-053414-actions.md  maintain-2026-05-15-073207-actions.md  maintain-2026-05-16-095030-actions.md  maintain-2026-05-17-052144-actions.md  maintain-2026-05-21-100548-actions.md  maintain-2026-05-23-045712-actions.md  maintain-2026-05-26-042336-actions.md  maintain-2026-06-06-044130-actions.md  maintain-2026-06-07-032230-actions.md  maintain-2026-06-07-033852-actions.md  maintain-2026-06-08-040822-actions.md  maintain-2026-06-10-043532-actions.md  maintain-2026-06-12-042758-actions.md  maintain-2026-06-13-041741-actions.md  maintain-2026-06-17-060201-actions.md  maintain-2026-06-18-050118-actions.md  maintain-2026-06-21-034520-actions.md  maintain-2026-06-23-033129-actions.md  (+11 more)
docs/: index.md  installation.md  quick-start.md
docs/configuration/: advanced.md  models.md  vault.md
docs/features/: git-integration.md  graph-traversal.md  mcp-servers.md  smart-memory.md  tools.md  visual-analysis.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/plugins/: creating-plugins.md  examples.md  guide.md  overview.md  service-provider.md
docs/reference/: cli-commands.md  configuration.md  troubleshooting.md
docs/tools/: document-management.md  git-integration.md  graph-traversal.md
docs/usage/: cli.md  gui.md  index-management.md  interactive-chat.md  single-query.md
docs/user-guide/: index-management.md  interactive-chat.md  mcp-servers.md  single-queries.md  smart-memory.md  visual-analysis.md
integration_tests/: README.md  __init__.py  agent_runner.py  conftest.py  image_operations_integration.py  llm_validator.py  scenario_harness.py  vault_builder.py
integration_tests/scenarios/: __init__.py
integration_tests/test_resources/: README.md
markdown/: loader.py  test_loader_parse_metadata.py  test_loader_separate_content_from_metadata.py  test_markdown_parse_metadata.py  test_markdown_separate_content_from_metadata.py
rag/: chat_session.py  query.py  test_chat_session.py  test_splitter_split_to_chunks.py
zk_chat/: agent.py  agent_prompt.md  agent_prompt.txt  agent_spec.py  bootstrap.py  chat.py  chroma_collections.py  chroma_collections_spec.py  chroma_gateway.py  chroma_gateway_spec.py  cli.py  cli_spec.py  config.py  config_gateway.py  config_gateway_spec.py  config_resolution.py  config_resolution_spec.py  config_spec.py  conftest.py  console_gateway.py  console_gateway_spec.py  console_service.py  console_service_spec.py  diagnostics.py  diagnostics_spec.py  enumerate_plugins.py  filename_utils.py  filename_utils_spec.py  filesystem_gateway.py  filesystem_gateway_spec.py  formatting.py  formatting_spec.py  gateway_defaults.py  gateway_defaults_spec.py  gateway_factory.py  gateway_factory_spec.py  global_config.py  global_config_gateway.py  global_config_gateway_spec.py  global_config_mcp_spec.py  (+42 more)
zk_chat/commands/: bookmarks.py  bookmarks_spec.py  config_helpers.py  config_helpers_spec.py  diagnose.py  diagnose_spec.py  gui.py  gui_spec.py  index.py  index_spec.py  mcp.py  mcp_spec.py
zk_chat/markdown/: loader_parse_metadata_spec.py  loader_separate_content_from_metadata_spec.py  markdown_filesystem_gateway.py  markdown_filesystem_gateway_spec.py  markdown_utilities.py  markdown_utilities_spec.py  test_loader_parse_metadata.py  test_loader_separate_content_from_metadata.py
zk_chat/memory/: smart_memory.py  smart_memory_spec.py
zk_chat/rag/: query.py  query_spec.py  splitter.py  splitter_spec.py  test_splitter_split_to_chunks.py
zk_chat/services/: __init__.py  index_service.py  (+17 more)
(+52 files in other folders)
