[project]
name = "zk-chat"
version = "3.2.0"
authors = [
    { name = "Stacey Vetzal", email = "stacey@vetzal.com" },
]
description = "zk-chat is a command-line chat tool for your zettelkasten"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies = [
    "chromadb>=1.1.0",
    "pyyaml",
    "mojentic>=0.8.0",
    "PySide6>=6.6.0",
    "rich",
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "pytest-spec",
    "pytest-cov",
    "pytest-mock",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["zk_chat", "zk_chat.*"]

[project.urls]
Homepage = "https://github.com/svetzal/zk-chat"
Issues = "https://github.com/svetzal/zk-chat/issues"

[project.scripts]
zk-chat = "zk_chat.main:app"
